$Id: History,v 1.55 2002-04-24 14:03:08 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
18 apr 02: mma (stand-V04-00-08)
- new process: G4GammaConversionToMuons
     
18 apr 02: mma (stand-V04-00-07)
- G4ComptonScattering: LowestEnergyLimit=1*keV
- G4PhotoElectric: Keep only Sandia crossSections. Remove BuildPhysicsTables.
  Simplify public interface.     
     
27 mar 02: V.Ivanchenko (stand-V04-00-06)
- G4hIonisation: Bug fix in scaling of lambda table

26 mar 02: mma (stand-V04-00-05)
- G4eIonisation: change access to cuts in BuildLossTables (V.Ivanchenko)

22 mar 02: V. Grichine (stand-V04-00-04)
- modifications in G4PAIxSection allowing to get additional information on
  transverse and longitudinal excitations at atomic frequences.
     
21 mar 02: mma (stand-V04-00-03)
- G4GammaConversion::DoIt() correction of e+e- angular distribution (bug 363)
     
27 fev 02: mma (stand-V04-00-02)
- V.Ivanchenko remove the fix for GenericIons in G4VhEnergyLoss, G4hIonisation;

27 fev 02: mma (stand-V04-00-01)
- V.Ivanchenko fix G4VhEnergyLoss, G4hIonisation for GenericIons;
- G4VeEnergyLoss and G4VhEnergyLoss : error in TouchebleHandle - take from 
  PreStepPoint  
     
10 fev 02: mma (stand-V04-00-00)